0.1. Отладка лямбда в IDEA [#332197]